--- a/render.yaml
+++ b/render.yaml
@@ -31,6 +31,8 @@ services:
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec rake powder:check"
     envVars:
+      - key: RAILS_ENV
+        value: production
       - key: DATABASE_URL
         fromDatabase:
           name: powder-hunter-db
